Consolidated code to display Personal Info for Student Profiles

--- a/student-records-app/src/frontend/studentProfile.css
+++ b/student-records-app/src/frontend/studentProfile.css
@@ -11,7 +11,11 @@
 }
 
 #personal-info, .courses-info {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+}
+
+.courses-info {
+    margin-top: 40px;
 }
 
 .section-header {
