--- a/student-records-app/src/frontend/courses.css
+++ b/student-records-app/src/frontend/courses.css
@@ -3,15 +3,17 @@ body {
   margin: 0;
   padding: 20px 0; /* Add padding at the top and bottom of the page */
   background: #f9f9f9; /* Optional: Add a light background color */
+  animation: fadeInUp 0.8s ease;
 }
 
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  margin-top: 100px; 
   padding: 20px;
-  background: #fff; /* Optional: Add a white background to the container */
   border-radius: 8px; /* Optional: Add rounded corners */
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: Add a subtle shadow */
+  background: rgba(255, 255, 255, 0.9);
 }
 
 h2 {
@@ -80,12 +82,13 @@ h2 {
 }
 
 .course-item {
-  padding: 10px;
+  padding: 20px;
   border-bottom: 1px solid #ccc;
   background: #fff;
   border-radius: 5px;
   margin-bottom: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  margin-top: 17px; 
 }
 
 .course-header {
@@ -118,6 +121,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: 20px; 
 }
 .auth-button label{
   color: white;
